crates/vm/tests/snapshots/simple__cmp_lt.snap
---
source: crates/vm/tests/simple.rs
expression: snapshot
---
# Input:
2 < 2

# Result (success):
false

# Stdout:

