crates/vm/tests/snapshots/simple__mul.snap
---
source: crates/vm/tests/simple.rs
expression: snapshot
---
# Input:
2 * 2

# Result (success):
4

# Stdout:

