crates/vm/tests/snapshots/simple__opt_val.snap
---
source: crates/vm/tests/simple.rs
expression: snapshot
---
# Input:
2 ?? none

# Result (success):
2

# Stdout:

