crates/vm/tests/snapshots/simple__plus_n.snap
---
source: crates/vm/tests/simple.rs
expression: snapshot
---
# Input:
+2

# Result (success):
2

# Stdout:

