crates/vm/tests/snapshots/simple__true_and_false.snap
---
source: crates/vm/tests/simple.rs
expression: snapshot
---
# Input:
true && false

# Result (success):
false

# Stdout:

